# The location of the build configuration file.
buildconfig = "//build/config/BUILDCONFIG.gn"

# The python interpreter to use by default. On Windows, this will look
# for python3.exe and python3.bat.
script_executable = "python3"

default_args = {
  angle_standalone = false
  angle_enable_msl_through_spirv = false
  angle_use_wayland = false
  dawn_use_built_dxc = false
}